--- a/src/web/styles/responsive.css
+++ b/src/web/styles/responsive.css
@@ -52,7 +52,7 @@
   }
 
   .message {
-    padding: 8px 9px 18px;
+    padding: 6px 9px;
   }
 
   .message.user {
